apps/base/cyberchef/dagster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cyberchef
  labels:
    toolkit.fluxcd.io/tenant: kog-team
---
