apps/base/cyberchef/cyberchef.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cyberchef
  labels:
    toolkit.fluxcd.io/tenant: kog-team
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyberchef-deployment
  labels:
    app: cyberchef
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cyberchef
  template:
    metadata:
      labels:
        app: cyberchef
    spec:
      containers:
      - name: cyberchef
        image: ghcr.io/gchq/cyberchef:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cyberchef-service
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
  selector:
    app: cyberchef
