apps/base/cyberchef/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dagster-frontend
  namespace: dagster
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cyberchef.local.reinthal.cc`)
      kind: Rule
      services:
        - name: cyberchef-service
          port: 8080
  tls:
    secretName: local-reinthal-cc-tls
---
